--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "next build",
-  "framework": "nextjs"
+  "builds": [
+    { "src": "package.json", "use": "@vercel/next" }
+  ]
 } 
