--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.321.0",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -27,6 +35,7 @@
     "react-hot-toast": "^2.5.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.2.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
